--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -9,12 +9,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu:latest
-    container: python:3.9-slim 
+    runs-on: ubuntu-latest
+    container: python:3.9-slim
+
     services:
       postgres:
         image: postgres:alpine
-        ports: 
+        ports:
           - 5432:5432
         env:
           POSTGRES_PASSWORD: pgs3cr3t
@@ -26,7 +27,7 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v2
 
       - name: Install dependencies
@@ -38,11 +39,8 @@ jobs:
         run: |
           flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
-      
-      - name: Run unit tests with Nose
-        run: |
-          nosetests -v --with-spec --spec-color --with-coverage --cover-package=service
+
+      - name: Run unit tests with nose
+        run: nosetests
         env:
           DATABASE_URI: "postgresql://postgres:pgs3cr3t@postgres:5432/testdb"
-
-
